src/tests/snapshots/integration__github_secret_scanning__github_secret_alert_for_revoked_token-2.snap
---
source: src/tests/github_secret_scanning.rs
expression: response.json()
---
[
  {
    "label": "true_positive",
    "token_raw": "some_token",
    "token_type": "some_type"
  }
]
