src/tests/snapshots/integration__github_secret_scanning__github_secret_alert_for_unknown_trustpub_token-2.snap
---
source: src/tests/github_secret_scanning.rs
expression: response.json()
---
[
  {
    "label": "false_positive",
    "token_raw": "[token]",
    "token_type": "some_type"
  }
]
