src/tests/snapshots/integration__github_secret_scanning__github_secret_alert_revokes_token-3.snap
---
source: src/tests/github_secret_scanning.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your API token "bar" has been revoked
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


GitHub has notified us that your crates.io API token bar has been exposed publicly. We have revoked this token as a precaution.

Please review your account at https://crates.io to confirm that no unexpected changes have been made to your settings or crates.

Source type: some_source

URL where the token was found: some_url

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>GitHub has notified us that your crates.io API token <strong>bar</strong> has been exposed publicly. We have revoked this token as a precaution.</p>

<p>Please review your account at <a href="https://crates.io">https://crates.io</a> to confirm that no unexpected changes have been made to your settings or crates.</p>

<p>Source type: some_source</p>

<p>URL where the token was found: <a href="some_url">some_url</a></p>

<p>--<br>The crates.io Team</p>
--[boundary]--
