src/tests/snapshots/integration__github_secret_scanning__github_secret_alert_revokes_trustpub_token_multiple_users-3.snap
---
source: src/tests/github_secret_scanning.rs
expression: app.emails_snapshot().await
---
To: user1@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your Trusted Publishing token has been revoked
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


GitHub has notified us that one of your crates.io Trusted Publishing tokens has been exposed publicly. We have revoked this token as a precaution.

This token was authorized to publish the following crates: "crate1", "crate2".

Please review your account at https://crates.io and your GitHub repository settings to confirm that no unexpected changes have been made to your crates or trusted publishing configurations.

Source type: some_source

URL where the token was found: some_url

Trusted Publishing tokens are temporary and used for automated publishing from GitHub Actions. If this exposure was unexpected, please review your repository's workflow files and secrets.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>GitHub has notified us that one of your crates.io Trusted Publishing tokens has been exposed publicly. We have revoked this token as a precaution.</p>

<p>This token was authorized to publish the following crates: "<strong>crate1&lt;&#x2f;strong&gt;&quot;, &quot;&lt;strong&gt;crate2</strong>".</p>

<p>Please review your account at <a href="https://crates.io">https://crates.io</a> and your GitHub repository settings to confirm that no unexpected changes have been made to your crates or trusted publishing configurations.</p>

<p>Source type: some_source</p>

<p>URL where the token was found: <a href="some_url">some_url</a></p>

<p>Trusted Publishing tokens are temporary and used for automated publishing from GitHub Actions. If this exposure was unexpected, please review your repository's workflow files and secrets.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--

----------------------------------------

To: user2@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your Trusted Publishing token has been revoked
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


GitHub has notified us that one of your crates.io Trusted Publishing tokens has been exposed publicly. We have revoked this token as a precaution.

This token was only authorized to publish the "crate2" crate.

Please review your account at https://crates.io and your GitHub repository settings to confirm that no unexpected changes have been made to your crates or trusted publishing configurations.

Source type: some_source

URL where the token was found: some_url

Trusted Publishing tokens are temporary and used for automated publishing from GitHub Actions. If this exposure was unexpected, please review your repository's workflow files and secrets.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>GitHub has notified us that one of your crates.io Trusted Publishing tokens has been exposed publicly. We have revoked this token as a precaution.</p>

<p>This token was only authorized to publish the "<strong>crate2</strong>" crate.</p>

<p>Please review your account at <a href="https://crates.io">https://crates.io</a> and your GitHub repository settings to confirm that no unexpected changes have been made to your crates or trusted publishing configurations.</p>

<p>Source type: some_source</p>

<p>URL where the token was found: <a href="some_url">some_url</a></p>

<p>Trusted Publishing tokens are temporary and used for automated publishing from GitHub Actions. If this exposure was unexpected, please review your repository's workflow files and secrets.</p>

<p>--<br>The crates.io Team</p>
--[boundary]--
